ESOC21_propensity_score_weighing

--- a/ISC21_propensity_score_matching.ipynb
+++ b/ISC21_propensity_score_matching.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Propensity score matching for outcomes in wake-up stroke treatment (presented at ISC21)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 620,
    "metadata": {},
